made the align right class go active without active class

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,9 @@ a{
 
 }
 .alignright{
-  float: right!important;
+  float: right !important;
+  background-color: #4CAF50 ;
+  color: white;
 }
 .backgroundcolor{
   background-color: #23b0fc;
