--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ a{
   color:#ffffff;
   background-color: #FEAF2E;
   border-radius: 30px;
-
 }
 .alignright{
   float: right !important;
@@ -74,4 +73,9 @@ body{
 }
 .contactlink:hover{
   background-color: #5cb85c!important;
+}
+.centercenter{
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
 }
