--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,10 @@ body{
   margin-left: auto;
   margin-right: auto;
 }
+.toplogo{
+  width:200px;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  margin:none!important;
+}
