--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ a{
   background-color: #184A45FF;
 }
 nav{
-  background-color: #184A45FF
+  background-color: #184A45FF;
 ;
 
 
@@ -30,7 +30,7 @@ a:hover{
   background-color: #545454;
 }
 .active {
-  background-color: #4CAF50 ;
+  background-color: #4CAF50;
   color: white;
 }
 ul{
@@ -47,7 +47,7 @@ h2{
 
 }
 body{
-  background-color: #FC766AFF
+  background-color: #FC766AFF;
 }
 .intro{
   text-align: center;
@@ -65,7 +65,7 @@ body{
 
 }
 .reee{
-  background-color: #4CAF50 ;
+  background-color: #4CAF50;
   color: white;
 }
 .contactlink{
