--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ a:link{
   text-decoration: none;
 }
 a:hover{
-  background-color: ##00008b;
+  background-color: #00008b;
 }
 .active {
   background-color: #4CAF50;
@@ -70,7 +70,7 @@ body{
   color: white;
 }
 .contactlink{
-  background-color: #FC766A!important;
+  background-color: #4d4dff!important;
 
 }
 .contactlink:hover{
